[package]
name = "pac194x"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Kiran Shila <me@kiranshila.com> and contributors"]
description = "Platform-agnostic Rust driver for PAC194x/PAX195X 9V/32, 16-bit power monitors with alerts"
keywords = ["no-std", "embedded-hal-driver", "voltage", "power-monitor"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/kiranshila/pac194x"
readme = "README.md"
documentation = "https://docs.rs/crate/pac194x/"

[dependencies]
embedded-hal = "1"
pastey = "0.2"

# For the example
[dev-dependencies]
embedded-hal-bus = "0.3.0"
linux-embedded-hal = "0.4.1"

[dependencies.packed_struct]
version = "0.10"
default-features = false

[dependencies.register_derive]
path = "register_derive"
version = "0.2.0"

[workspace]
members = ["register_derive"]
